# online-dev

./: .ghci  .gitignore  .hlint.yaml  .travis.yml  hie.yaml  index.html  online-dev.cabal  online-market.cabal  package.yaml  readme.md  stack.yaml
app/: app.hs  bayes-testing.hs  bayes.hs  clean.hs  history-fits.hs  random.hs  regression.hs  stats-testing.hs  stats-testing.lhs  stats.hs
default/: default.md  index.html  online-market.md
examples/: examples.hs  examples.md  examplesOld.md
other/: YAHOO-INDEX_GSPC.csv  ^GSPC.csv  data.csv  digitize.md  lhs.css  online-market.md  online-market_.md  online_.md  quantiles.md  random.md  regression.md  regressions.md  stats-testing.html  style.css  test.csv
other/classification/: ^GSPC.csv
runs/default/: index.html  online-market.md  online.md
runs/t2/: index.html
src/: Run.hs  Stats.hs
src/Chart/: Various.hs
src/Data/: Mealy.hs  Quantiles.hs  Random.hs  Yahoo.hs
src/Run/: Charts.hs  History.hs  Random.hs  Stats.hs  Types.hs
stats/: online-market.md
test/: test.hs
