name:
  online-dev
version:
  0.1.0.0
synopsis:
  online statistics - development library
description:
  see readme.md for description.
homepage:
  https://github.com/tonyday567/online-dev
license:
  BSD3
license-file:
  LICENSE
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Tony Day
category:
  statistics            
build-type:
  Simple
cabal-version:
  >=1.10

executable online-dev-examples
  default-language:
    Haskell2010
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
    -threaded
    -rtsopts
    -with-rtsopts=-N
  hs-source-dirs:
    ./examples
  main-is:
    examples.hs
  build-depends:
    base >= 4.7 && < 5,
    online,
    protolude,
    foldl,
    cassava,
    text,
    bytestring,
    formatting,
    chart-unit,
    vector,
    primitive,
    containers,
    data-default,
    linear, 
    lens,
    pipes,
    ad,
    ListLike,
    reflection,
    diagrams-lib,
    tower
  default-extensions:
    NoImplicitPrelude,
    UnicodeSyntax,
    BangPatterns,
    BinaryLiterals,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DisambiguateRecordFields,
    EmptyCase,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTSyntax,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MonadComprehensions,
    MultiParamTypeClasses,
    MultiWayIf,
    NegativeLiterals,
    OverloadedStrings,
    ParallelListComp,
    PartialTypeSignatures,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TupleSections,
    TypeFamilies,
    TypeOperators

source-repository head
  type:     git
  location: https://github.com/tonyday567/online-dev
