cabal-version: 3.0
name:           online-market
version:        0.0.1
synopsis:       online market daily statistics
description:    Applying the online library to daily market returns.
category:       statistics
homepage:       https://github.com/tonyday567/online-market#readme
bug-reports:    https://github.com/tonyday567/online-market/issues
author:         Tony Day
maintainer:     tonyday567@gmail.com
copyright:      Tony Day
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-doc-files: other/*.svg

source-repository head
  type: git
  location: https://github.com/tonyday567/online-market

library
  exposed-modules:
      Data.Random,
      Data.Yahoo,
      Run,
      Stats
  hs-source-dirs:
      src
  default-extensions: NoImplicitPrelude UnicodeSyntax NegativeLiterals OverloadedStrings
  build-depends:
      base >=4.7 && <5
    , attoparsec
    , backprop
    , chart-svg >= 0.0.3 && < 0.1
    , containers
    , turtle
    , foldl
    , generic-lens >= 1.2 && < 2.0
    , lens
    , mwc-probability
    , mwc-random
    , numhask-prelude >= 0.5 && < 0.6
    , numhask-space >= 0.4 && < 0.5
    , optparse-generic
    , online-csv == 0.0.1
    , primitive
    , readme-lhs >= 0.6 && < 0.7
    , scientific
    , text
    , time
    , numhask-array >= 0.6 && < 0.7
    , box
    , readme-lhs
    , transformers
    , profunctors
    , folds
  default-language: Haskell2010

executable stats-testing
  main-is: stats-testing.hs
  hs-source-dirs:
      app
  ghc-options: -funbox-strict-fields -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      online-market
    , attoparsec
    , backprop
    , base >=4.7 && <5
    , chart-svg >= 0.0.3 && < 0.1
    , containers
    , foldl
    , generic-lens >= 1.2 && < 2.0
    , lens
    , mwc-probability
    , mwc-random
    , numhask-space >= 0.4 && < 0.5
    , optparse-generic
    , online-csv == 0.0.1
    , numhask-prelude >= 0.5 && < 0.6
    , primitive
    , readme-lhs >= 0.6 && < 0.7
    , scientific
    , text
    , time
    , interpolatedstring-perl6
    , pretty-simple
    , numhask-array >= 0.6 && < 0.7
    , web-rep
    , lucid
    , wai
    , wai-extra
    , scotty
    , wai-middleware-static
    , box
    , readme-lhs
    , transformers
    , profunctors
    , folds
    , optparse-generic

  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: test.hs
  hs-source-dirs:
      test
  default-extensions: NoImplicitPrelude UnicodeSyntax NegativeLiterals OverloadedStrings
  build-depends:
      base >=4.7 && <5,
      protolude,
      doctest,
      online-market
  default-language: Haskell2010
