cabal-version:  2.4
name:           online-market
version:        0.0.1
synopsis:       online market daily statistics
description:    Applying the online library to daily market returns.
category:       statistics
homepage:       https://github.com/tonyday567/online-market#readme
bug-reports:    https://github.com/tonyday567/online-market/issues
author:         Tony Day
maintainer:     tonyday567@gmail.com
copyright:      Tony Day
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-doc-files: other/*.svg

source-repository head
  type: git
  location: https://github.com/tonyday567/online-market

library
  exposed-modules:
    Data.Yahoo
    Run.History
    Run.Random
    Run.Stats
    Run.Types
  hs-source-dirs:
    src
  build-depends:
    adjunctions >= 4.4,
    attoparsec,
    backprop,
    base >=4.7 && <5,
    box,
    chart-svg >= 0.1,
    containers,
    distributive >= 0.6,
    foldl,
    folds,
    generic-lens >= 2.0,
    hmatrix >= 0.20,
    lens,
    mwc-probability,
    mwc-random,
    numhask-array >= 0.7,
    numhask-prelude >= 0.6,
    numhask-space >= 0.5,
    online,
    box-csv,
    optparse-generic,
    primitive,
    profunctors,
    readme-lhs >= 0.7,
    scientific,
    tdigest >= 0.2,
    text,
    time,
    transformers,
    turtle,
    vector >= 0.12,
    vector-algorithms >= 0.8,
    web-rep >= 0.6
  default-language: Haskell2010

executable stats-testing
  main-is: stats-testing.hs
  hs-source-dirs:
    app
  ghc-options: -funbox-strict-fields -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    attoparsec,
    backprop,
    base >=4.7 && <5,
    box,
    chart-svg >= 0.1,
    containers,
    foldl,
    folds,
    generic-lens >= 1.2,
    interpolatedstring-perl6,
    lens,
    lucid,
    mwc-probability,
    mwc-random,
    numhask-array >= 0.7,
    numhask-prelude >= 0.6,
    numhask-space >= 0.5,
    online,
    box-csv,
    online-market,
    optparse-generic,
    pretty-simple,
    primitive,
    profunctors,
    readme-lhs >= 0.7,
    scientific,
    scotty,
    text,
    time,
    transformers,
    wai,
    wai-extra,
    wai-middleware-static,
    web-rep
  default-language: Haskell2010

executable bayes-testing
  main-is: bayes-testing.hs
  hs-source-dirs:
    app
  ghc-options: -funbox-strict-fields -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    attoparsec,
    backprop,
    base >=4.7 && <5,
    box,
    chart-svg >= 0.1,
    containers,
    foldl,
    folds,
    generic-lens >= 1.2 && < 3.0,
    interpolatedstring-perl6,
    lens,
    log-domain,
    lucid,
    monad-bayes,
    mwc-probability,
    mwc-random,
    numhask-array >= 0.7,
    numhask-prelude >= 0.6,
    numhask-space >= 0.5,
    online,
    box-csv,
    online-market,
    optparse-generic,
    pretty-simple,
    primitive,
    profunctors,
    readme-lhs >= 0.7,
    scientific,
    scotty,
    text,
    time,
    transformers,
    wai,
    wai-extra,
    wai-middleware-static,
    web-rep
  default-language: Haskell2010
