cabal-version:  2.4
name:           online-market
version:        0.0.1
synopsis:       online market daily statistics
description:    Applying the online library to daily market returns.
category:       statistics
homepage:       https://github.com/tonyday567/online-market#readme
bug-reports:    https://github.com/tonyday567/online-market/issues
author:         Tony Day
maintainer:     tonyday567@gmail.com
copyright:      Tony Day
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-doc-files: other/*.svg

source-repository head
  type: git
  location: https://github.com/tonyday567/online-market

library
  exposed-modules:
    Data.Yahoo
    Run.History
    Run.Random
    Run.Stats
  hs-source-dirs:
    src
  build-depends:
    adjunctions >= 4.4,
    attoparsec,
    backprop >= 0.2.6.4 && < 0.2.7,
    base >=4.7 && <5,
    box >= 0.5 && < 0.6,
    chart-svg >= 0.1 && < 0.2,
    chart-svg-various >= 0.0.1 && < 0.1,
    containers,
    distributive >= 0.6,
    foldl,
    folds,
    generic-lens >= 2.0,
    hmatrix >= 0.20,
    lens,
    mwc-probability,
    mwc-random,
    numhask-array >= 0.7 && < 0.8,
    numhask >= 0.6 && < 0.7,
    numhask-space >= 0.6 && < 0.7,
    mealy >= 0.0.1 && < 0.1,
    box-csv >= 0.0.1 && < 0.1,
    optparse-generic,
    primitive,
    profunctors,
    scientific,
    tdigest >= 0.2,
    text,
    time,
    transformers,
    turtle,
    unordered-containers,
    vector >= 0.12,
    vector-algorithms >= 0.8,
    web-rep >= 0.7 && < 0.8,
  default-language: Haskell2010

executable stats-testing
  main-is: stats-testing.hs
  hs-source-dirs:
    app
  ghc-options: -funbox-strict-fields -fforce-recomp -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    attoparsec,
    backprop >= 0.2.6.4 && < 0.2.7,
    base >=4.7 && <5,
    box >= 0.5 && < 0.6,
    chart-svg >= 0.1 && < 0.2,
    chart-svg-various >= 0.0.1 && < 0.1,
    containers,
    foldl,
    folds,
    generic-lens >= 1.2,
    interpolatedstring-perl6,
    lens,
    lucid,
    mwc-probability,
    mwc-random,
    numhask-array >= 0.7 && < 0.8,
    numhask >= 0.6 && < 0.7,
    numhask-space >= 0.6 && < 0.7,
    mealy >= 0.0.1 && < 0.1,
    box-csv >= 0.0.1 && < 0.1,
    online-market,
    optparse-generic,
    pretty-simple,
    primitive,
    profunctors,
    scientific,
    scotty,
    text,
    time,
    transformers,
    unordered-containers,
    wai,
    wai-extra,
    wai-middleware-static,
    web-rep >= 0.7 && < 0.8
  default-language: Haskell2010

